# ny-yellowcab

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/dim/: dim_date.csv  dim_distance_bucket.csv  dim_hour.csv  dim_weekday.csv
docs/: _analysis_cache.txt  expensive_routes.csv  hourly_trips.csv  monthly_revenue.csv  nyc_pickup_map.html  plotly_histogram.html
powerbi/: ny-yellowcab.pbix
scripts/: aggregate_metrics.py  clean_curate.py  export_powerbi_dims.py  split_dataset.py  validate_curated.py
